# Simple-Shell

./: .gitignore  CMakeLists.txt  README.md
dep/headers/: functionDefinitions.h
src/: main.c
src/headers/: functionDefinitions.h  helpers.h  modules.h
src/helpers/: array.c  helperFunctions.c  input.c
src/modules/: Stage1userInput.c  Stage2execute.c  Stage6.c  alias.c  cd.c  cd3and4.c  checkCommands.c  execute.c  history.c  stage3PathHome.c  userInput.c
